# sniffer

./: FIX_APPLIED.md  MODEL_REPORT.md  NOTEBOOK_GUIDE.md  best_model.keras  food_spoilage_fp32.tflite  food_spoilage_int8.tflite  main.py  notebook.ipynb  notebook_executed.ipynb  project.md  pyproject.toml  script.py  test.py
raw dataset/: Readme.md
refined/: X_test.npy  X_train.npy  X_val.npy  label_map.json  scaler.json  stats.txt  y_test.npy  y_train.npy  y_val.npy
