[project]
name = "gas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
